Creation of domains that match certain regular expressions can be denied using a new Module Config option in the Defaults for new domains section.
Added the --only-features parameter to restore-domain.pl, which tells Virtualmin to only enable features selected for restore when creating a new domain as part of the process.
Added a similar option to the restore form in the Virtualmin web interface.
Usage for previous months can be shown on the Bandwidth Monitoring page, using a month selector menu at the bottom of the table of domains or dates.
Added options on the Edit Server Template page to make some non-default template the one that is initially selected when adding new virtual servers, migrating them or creating from a batch file.
---- Changes since 3.46 ----
Updated the Wordpress script installer to version 2.2.3, and Wordpress MU to version 1.2.5a.
Added support for migrating domains from Plesk 8 backups.
The migration function will use the username and password from the original domain where possible, removing the need to specify them manually when on the migration form or as parameters to migrate-domain.pl. For Plesk backups the original username and password can be retrieved, while for Ensim and cPanel only the username can be found automatically.
The System Settings category on the left menu of the framed theme is now broken down into 5 smaller menus, to make things easier to find.
Updated the Xoops script installer to automate the database connection and administration user creation, so that you no longer have to go through the install wizard manually.
Added an option to the Create alias websites by setting in server templates to use RedirectMatch instead of Redirect, which is more Google-friendly for parked domains.